fixed sizing and spacing for header and ul

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body img {
     text-align: center;
 }
 
-.hedaer-resume p {
+.header-resume p {
     font-family: Rubik, "Times New Roman";
     font-size: 16px;
     font-weight: bold;
@@ -24,6 +24,7 @@ header {
     font-size: 30px;
     text-align: left;
     text-decoration: underline;
+    padding-left: 50px;
 }
 
 li {
@@ -31,8 +32,11 @@ li {
     font-size: 16px;
     font-weight: bold;
     text-align: left;
+    padding-left: 200px;
+    list-style: none;
 }
 
+/*navbar*/
 .navbar-container ul {
     list-style: none;
     background: white;
@@ -62,7 +66,6 @@ li {
 }
 
 /*resume webpage*/
-
 .baby-sitting img {
     text-align: center;
     width: 30%;   
